Validate requested year for annual leave summary